fix(stylings): re-align the svg icons & single/multiple-select icon+text - add sass utilities for material icon vertical alignment

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -130,7 +130,7 @@ $multiselect-icon-checked-color:                $highlight-color !default;
 $multiselect-icon-border:                       1px solid #d6d4d4 !default;
 $multiselect-icon-height:                       15px !default;
 $multiselect-icon-width:                        15px !default;
-$multiselect-icon-margin:                       0px 4px 2px 0 !default;
+$multiselect-icon-margin:                       0px 4px 0 0 !default;
 $multiselect-icon-border-radius:                0.125rem !default;
 $multiselect-icon-unchecked-color:              $bare-color !default;
 $multiselect-icon-radio-color:                  $highlight-color !default;
