--- a/packages/common/src/styles/sass-utilities.scss
+++ b/packages/common/src/styles/sass-utilities.scss
@@ -1,4 +1,4 @@
-$svg-icon-vertical-align: text-top !default;
+$svg-icon-vertical-align: bottom !default;
 
 @function encodecolor($string) {
 	@if type-of($string) == 'color' {
